--- a/Trabalho AM - Francisco.ipynb
+++ b/Trabalho AM - Francisco.ipynb
@@ -33,7 +33,9 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from scipy.spatial import distance\n",
-    "from sklearn import preprocessing\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "#Carregamento de Arquivos\n",
@@ -75,9 +77,70 @@
    "outputs": [],
    "source": [
     "#Normalização para intervalo de 0<x<1\n",
-    "data_fac = preprocessing.normalize(data_fac)\n",
-    "data_fou = preprocessing.normalize(data_fou)\n",
-    "data_kar = preprocessing.normalize(data_kar)"
+    "scaler = MinMaxScaler()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/rcp/Projeto AM/am_env/lib/python3.6/site-packages/sklearn/utils/validation.py:595: DataConversionWarning: Data with input dtype int64 was converted to float64 by MinMaxScaler.\n",
+      "  warnings.warn(msg, DataConversionWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = scaler.fit(data_fac)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = scaler.fit(data_fou)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = scaler.fit(data_kar)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_kar = scaler.transform(data_kar)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_fou = scaler.transform(data_fou)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_fac = scaler.transform(data_fac)"
    ]
   },
   {
@@ -89,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,50 +169,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7.202581493059794\n"
-     ]
-    }
-   ],
-   "source": [
-    "import time\n",
-    "start = time.time()\n",
-    "\n",
-    "diss_fac = Dissimilarity(data_fac)\n",
-    "diss_fou = Dissimilarity(data_fou)\n",
-    "diss_kar = Dissimilarity(data_kar)\n",
-    "\n",
-    "end = time.time()\n",
-    "print((end - start)/60)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "D_matrices = [diss_fac, diss_fou, diss_kar]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Algoritimo \"Multi-view relacional fuzzy c-medoids vectors clustering algorithm-MVFCMddV\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src=\"images/ini-g.png\" width=\"800\"/>"
+    "diss_fou = Dissimilarity(data_fou)\n",
+    "diss_kar = Dissimilarity(data_kar)"
    ]
   },
   {
@@ -158,55 +183,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Inicialização dos protótipos\n",
-    "np.random.seed(42)\n",
-    "G_matrices = [np.random.randint(1,K,diss_fac.shape[1]) for i in range(p)]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Matriz de peso"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src=\"images/ini-lambda.png\" width=\"800\"/>"
+    "diss_fac = Dissimilarity(data_fac)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Inicialização dos pesos\n",
-    "rel_weight = [np.ones((p,K), dtype=np.float16)]"
+    "D_matrices = [diss_fac, diss_fou, diss_kar]"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "Cálculo de Membership"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src=\"images/ini-u.png\" width=\"800\"/>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src=\"images/eq6.png\" width=\"800\"/>"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
